--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ts-retype",
-  "version": "0.1.0-rc.4",
+  "version": "0.1.0",
   "description": "",
   "license": "MIT",
   "author": "petlack",
