chore: add gh-pages github action

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "build": "rollup -c",
     "bump": "node config/bump.cjs",
     "clean": "rm -rf dist",
+    "docs:build": "cd docs && npm ci && npm run build",
     "format": "prettier --write './**/*.{js,ts,md,json}' --config ./.prettierrc",
     "format:check": "prettier --check .",
     "link": "cd dist && npm link",
