chore: add keywords to package.json

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "access": "public"
   },
   "description": "Discover duplicate TypeScript types in your codebase.",
+  "keywords": ["typescript", "static-analysis"],
   "license": "MIT",
   "repository": {
     "type": "git",
