chore: add bin:perf script

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "scripts": {
     "bin": "./dist/ts-retype.js",
     "bin:dev": "ts-node ./src/ts-retype.ts",
+    "bin:perf": "npm run build && node --stack-size=2000 --max-old-space-size=32768 dist/ts-retype.js",
     "build": "rollup -c",
     "bump": "node config/bump.cjs",
     "clean": "rm -rf dist",
