--- a/.retyperc
+++ b/.retyperc
@@ -1,5 +1,5 @@
 {
   "include": ["**/*.ts"],
-  "exclude": ["**/node_modules/**", "**/dist/**"],
+  "exclude": ["**/node_modules/**", "**/dist/**", "**/generated/**", "**/build/**"],
   "output": "./retype-report.html"
 }
