--- a/vis/package.json
+++ b/vis/package.json
@@ -21,6 +21,7 @@
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
     "micromatch": "^4.0.5",
+    "sass": "^1.59.2",
     "typescript": "^4.9.3",
     "vite": "^4.1.0",
     "vite-plugin-dynamic-import": "^1.2.7",
