--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "publish": "cd dist && npm publish",
     "security": "npm audit --audit-level=high",
     "test": "jest --coverage",
-    "test:watchAll": "jest --coverage --watchAll",
+    "test:watchAll": "jest --watchAll",
     "transpile": "tsc",
     "vis:build": "cd vis && npm run build",
     "vis:clean": "cd vis && npm run clean",
@@ -67,7 +67,7 @@
     "eslint": "^8.26.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-config-rollup": "^3.0.0",
-    "husky": "^8.0.1",
+    "husky": "^8.0.0",
     "jest": "^29.4.3",
     "lint-staged": "^11.0.1",
     "magic-string": "^0.30.0",
