--- a/package.json
+++ b/package.json
@@ -56,11 +56,13 @@
   "dependencies": {
     "commander": "^10.0.0",
     "glob": "^9.1.0",
+    "progress": "^2.0.3",
     "ramda": "^0.28.0",
     "typescript": "^4.9.5"
   },
   "devDependencies": {
     "@types/jest": "^29.4.0",
+    "@types/progress": "^2.0.5",
     "@types/ramda": "^0.28.23",
     "@typescript-eslint/eslint-plugin": "^5.54.0",
     "@typescript-eslint/parser": "^5.54.0",
