--- a/vis/package.json
+++ b/vis/package.json
@@ -22,6 +22,7 @@
     "@vitejs/plugin-react": "^3.1.0",
     "micromatch": "^4.0.5",
     "sass": "^1.59.2",
+    "stylus": "^0.59.0",
     "typescript": "^4.9.3",
     "vite": "^4.1.0",
     "vite-plugin-dynamic-import": "^1.2.7",
