--- a/docs/package.json
+++ b/docs/package.json
@@ -4,9 +4,10 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "tsc && vite build",
+    "build": "tsc && npm run snippets && vite build",
     "dev": "vite",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "snippets": "cd scripts && npm run dev"
   },
   "dependencies": {
     "react": "^18.2.0",
