--- a/docs/scripts/package.json
+++ b/docs/scripts/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "build": "tsc",
     "dev": "ts-node --esm src/syntaxHighlighting.ts",
-    "syntax": "node dist/syntaxHighlighting.js"
+    "snippets": "node dist/syntaxHighlighting.js"
   },
   "devDependencies": {
     "esm": "^3.2.25",
