--- a/package.json
+++ b/package.json
@@ -35,8 +35,7 @@
     "lint:js": "eslint --cache src config tests vis/src --ext .js,.ts,.mjs,.cjs",
     "lint:json": "prettier --write **/tsconfig.json",
     "lint:package": "prettier --write **/package.json",
-    "postbuild": "npm run vis:build && node config/prepare.cjs",
-    "postinstall": "npm run vis:install",
+    "postbuild": "npm run vis:install && npm run vis:build && node config/prepare.cjs",
     "prebuild": "npm run clean",
     "prepare": "husky install",
     "publish": "cd dist && npm publish",
