--- a/package.json
+++ b/package.json
@@ -25,8 +25,9 @@
     "build": "rollup -c",
     "bump": "node config/bump.cjs",
     "clean": "rm -rf dist",
-    "docs:build": "cd docs && npm ci && npm run build",
+    "docs:build": "cd docs && npm run build",
     "docs:dev": "cd docs && npm run dev",
+    "docs:install": "cd docs && npm ci",
     "format": "prettier --write './**/*.{js,ts,md,json}' --config ./.prettierrc",
     "format:check": "prettier --check .",
     "link": "cd dist && npm link",
@@ -35,7 +36,8 @@
     "lint:js": "eslint --cache src config tests vis/src --ext .js,.ts,.mjs,.cjs",
     "lint:json": "prettier --write **/tsconfig.json",
     "lint:package": "prettier --write **/package.json",
-    "postbuild": "npm run vis:install && npm run vis:build && node config/prepare.cjs",
+    "postbuild": "npm run vis:build && node config/prepare.cjs",
+    "postinstall": "npm run vis:install && npm run docs:install",
     "prebuild": "npm run clean",
     "prepare": "husky install",
     "publish": "cd dist && npm publish",
