feat: redesign docs (#11)
* color changes
* redesign vis
* refactor: styles
* refactor: style variables
* feat: generate syntax highlighting
* feat: add syntax highlight generator
* feat: menu
* fix: refactor Bash
* feat: line numbers & bash signs

--- a/package.json
+++ b/package.json
@@ -25,8 +25,9 @@
     "build": "rollup -c",
     "bump": "node config/bump.cjs",
     "clean": "rm -rf dist",
-    "docs:build": "cd docs && npm ci && npm run build",
+    "docs:build": "cd docs && npm run build",
     "docs:dev": "cd docs && npm run dev",
+    "docs:install": "cd docs && npm ci",
     "format": "prettier --write './**/*.{js,ts,md,json}' --config ./.prettierrc",
     "format:check": "prettier --check .",
     "link": "cd dist && npm link",
@@ -36,7 +37,7 @@
     "lint:json": "prettier --write **/tsconfig.json",
     "lint:package": "prettier --write **/package.json",
     "postbuild": "npm run vis:build && node config/prepare.cjs",
-    "postinstall": "npm run vis:install",
+    "postinstall": "npm run vis:install && npm run docs:install",
     "prebuild": "npm run clean",
     "prepare": "husky install",
     "publish": "cd dist && npm publish",
