--- a/docs/package.json
+++ b/docs/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "tsc && vite build",
+    "build": "tsc && npm run snippets && vite build",
     "dev": "vite",
-    "preview": "vite preview"
+    "postinstall": "cd scripts && npm ci",
+    "preview": "vite preview",
+    "snippets": "cd scripts && npm run build && npm run snippets"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -16,6 +18,7 @@
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
+    "sass": "^1.59.2",
     "stylus": "^0.59.0",
     "typescript": "^4.9.3",
     "vite": "^4.1.0"
