--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -23,6 +23,7 @@ jobs:
 
     - run: npm run test
     - run: npm i coverage-badges-cli -g
+    - run: cp -R ./coverage ./docs/dist/coverage
     - run: coverage-badges --output ./docs/dist/badge-coverage.svg
 
     - name: Deploy
