--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "build": "rollup -c",
     "bump": "node config/bump.cjs",
     "clean": "rm -rf dist",
-    "dev": "ts-node-dev --respawn src/dev.ts",
+    "dev": "ts-node-dev --respawn",
     "docs:build": "cd docs && npm run build",
     "docs:dev": "cd docs && npm run dev",
     "docs:install": "cd docs && npm ci",
@@ -76,6 +76,7 @@
     "lint-staged": "^11.0.1",
     "magic-string": "^0.30.0",
     "prettier": "^2.8.4",
+    "rimraf": "^4.4.1",
     "rollup": "^3.17.0",
     "rollup-plugin-dts": "^5.2.0",
     "rollup-plugin-esbuild": "^5.0.0",
