--- a/.retyperc
+++ b/.retyperc
@@ -1,5 +1,5 @@
 {
-  "output": "./retype-report.html",
+  "rootDir": "./retype-report.html",
   "include": ["**/*.{ts,tsx}"],
   "exclude": ["**/node_modules/**","**/dist/**","**/generated/**","**/build/**"]
 }
