--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -20,7 +20,7 @@ jobs:
 
     - run: npm ci 
     - run: npm run docs:build
-
+    - run: npm run build
     - run: npm run test
     - run: npm i coverage-badges-cli -g
     - run: cp -R ./coverage ./docs/dist/coverage
