--- a/vis/package.json
+++ b/vis/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "date-fns": "^2.29.3",
     "minisearch": "^6.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
