--- a/package.json
+++ b/package.json
@@ -61,9 +61,14 @@
     "glob": "^9.1.0",
     "progress": "^2.0.3",
     "ramda": "^0.28.0",
+    "refractor": "^4.8.1",
     "typescript": "^4.9.5"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^24.0.1",
+    "@rollup/plugin-node-resolve": "^15.0.2",
+    "@rollup/plugin-terser": "^0.4.0",
+    "@rollup/plugin-typescript": "^11.1.0",
     "@types/jest": "^29.4.0",
     "@types/progress": "^2.0.5",
     "@types/ramda": "^0.28.23",
