--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
     "strict": true,
     "preserveConstEnums": true,
     "sourceMap": true,
-    "module": "commonjs",
+    "module": "es2020",
+    "lib": ["es2020"],
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "esModuleInterop": true,
