feat: use esm in jest

--- a/package.json
+++ b/package.json
@@ -43,8 +43,8 @@
     "prepare": "husky install",
     "publish": "cd dist && npm publish",
     "security": "npm audit --audit-level=high",
-    "test": "jest --coverage",
-    "test:watchAll": "jest --watchAll",
+    "test": "NODE_OPTIONS=--experimental-vm-modules jest --coverage",
+    "test:watchAll": "NODE_OPTIONS=--experimental-vm-modules jest --watchAll",
     "transpile": "tsc",
     "vis:build": "cd vis && npm run build",
     "vis:clean": "cd vis && npm run clean",
