refactor: separate scripts package

--- a/docs/package.json
+++ b/docs/package.json
@@ -7,8 +7,7 @@
     "build": "tsc && npm run snippets && vite build",
     "dev": "vite",
     "postinstall": "cd scripts && npm ci",
-    "preview": "vite preview",
-    "snippets": "cd scripts && npm run build && npm run snippets"
+    "preview": "vite preview"
   },
   "dependencies": {
     "react": "^18.2.0",
