--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "docs:build": "cd docs && npm run build",
     "docs:dev": "cd docs && npm run dev",
     "docs:install": "cd docs && npm ci",
-    "docs:snippets": "cd docs && npm run snippets",
+    "docs:snippets": "cd scripts && npm run run:snippets",
     "format": "prettier --write './**/*.{js,ts,md,json}' --config ./.prettierrc",
     "format:check": "prettier --check .",
     "link": "cd dist && npm link",
@@ -45,7 +45,7 @@
     "publish": "cd dist && npm publish",
     "security": "npm audit --audit-level=high",
     "test": "NODE_OPTIONS=--experimental-vm-modules jest --coverage",
-    "test:e2e": "cd tests/e2e && ../../dist/ts-retype.js . -c .retyperc",
+    "test:e2e": "cd example && ../dist/ts-retype.js . -c .retyperc",
     "test:watchAll": "NODE_OPTIONS=--experimental-vm-modules jest --watchAll",
     "transpile": "tsc",
     "vis:build": "cd vis && npm run build",
