--- a/example/package.json
+++ b/example/package.json
@@ -7,6 +7,7 @@
   "main": "src/index.ts",
   "type": "module",
   "scripts": {
+    "report": "ts-retype .",
     "start": "ts-node --esm src/index.ts"
   },
   "dependencies": {
