--- a/scripts/tsconfig.json
+++ b/scripts/tsconfig.json
@@ -7,5 +7,5 @@
     "outDir": "dist"
   },
   "include": ["src/**/*.ts"],
-  "exclude": ["node_modules", "**/*.spec.ts"]
+  "exclude": ["node_modules", "**/*.test.ts"]
 }
