--- a/example/tsconfig.json
+++ b/example/tsconfig.json
@@ -7,7 +7,9 @@
     "moduleResolution": "node",
     "esModuleInterop": true,
     "isolatedModules": true,
-    "rootDir": "src"
+    "skipLibCheck": true,
+    "rootDir": "src",
+    "outDir": "dist"
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules"]
