feat: add generateDocs to pipeline

--- a/package.json
+++ b/package.json
@@ -24,14 +24,15 @@
     "bin:perf": "npm run build && node --stack-size=2000 --max-old-space-size=32768 dist/ts-retype.cjs",
     "bin:rebuild": "npm run build && ./dist/ts-retype.cjs",
     "build": "rollup -c",
-    "build:all": "npm run build && npm run docs:build",
+    "build:all": "npm run build && npm run docs:build && npm run scripts:build && npm run example:build",
     "bump": "node config/bump.cjs",
     "clean": "rm -rf dist",
     "dev": "ts-node-dev --respawn",
     "docs:build": "cd docs && npm run build",
     "docs:dev": "cd docs && npm run dev",
     "docs:install": "cd docs && npm ci",
-    "docs:snippets": "cd scripts && npm run run:snippets -- -d ../docs/src/snippets -o ../docs/src/generated",
+    "docs:snippets": "cd scripts && npm run run:docs",
+    "example:build": "cd example && npm run build",
     "format": "prettier --write './**/*.{js,ts,md,json}' --config ./.prettierrc",
     "format:check": "prettier --check .",
     "link": "cd dist && npm link",
@@ -45,6 +46,7 @@
     "prebuild": "npm run clean",
     "prepare": "husky install",
     "publish": "cd dist && npm publish",
+    "scripts:build": "cd scripts && npm run build",
     "security": "npm audit --audit-level=high",
     "test": "NODE_OPTIONS=--experimental-vm-modules jest --coverage",
     "test:e2e": "cd example && ../dist/ts-retype.js . -c .retyperc",
