--- a/scripts/package.json
+++ b/scripts/package.json
@@ -11,8 +11,9 @@
     "dev:docs": "ts-node --esm src/generateDocs.ts",
     "dev:extract": "ts-node --esm src/extractSnippets.ts",
     "dev:snippets": "ts-node --esm src/syntaxHighlighting.ts",
-    "run:docs": "npm run build && node dist/generateDocs.js",
-    "run:snippets": "npm run build && node dist/syntaxHighlighting.js"
+    "run:docs": "node dist/generateDocs.js",
+    "run:readme": "node dist/generateReadme.js",
+    "run:snippets": "node dist/syntaxHighlighting.js"
   },
   "dependencies": {
     "ramda": "^0.29.0"
