feat: create pipeline

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -18,13 +18,16 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
 
-    - run: npm ci 
-    - run: npm run docs:build
-    - run: npm run build
-    - run: npm run test
-    - run: cp -R ./coverage ./docs/dist/coverage
-    - run: npm i coverage-badges-cli -g
-    - run: coverage-badges --output ./docs/dist/badge-coverage.svg
+    - name: Generate docs
+      run: |
+        npm i
+        npm run scripts:build
+        npm run make -- -f -p docs
+        cp -R ./coverage ./docs/dist/coverage
+        npm i coverage-badges-cli -g
+        coverage-badges --output ./docs/dist/badge-coverage.svg
+      env:
+        CI: true
 
     - name: Deploy
       uses: peaceiris/actions-gh-pages@v3
