--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "docs:readme": "cd scripts && npm run run:readme",
     "docs:snippets": "cd scripts && npm run run:docs",
     "example:build": "cd example && npm run build",
+    "example:report": "cd example && npm run report",
     "format": "prettier --write './**/*.{js,ts,md,json}' --config ./.prettierrc",
     "format:check": "prettier --check .",
     "link": "cd dist && npm link",
@@ -42,15 +43,15 @@
     "lint:js": "eslint --cache src config tests vis/src --ext .js,.ts,.mjs,.cjs",
     "lint:json": "prettier --write **/tsconfig.json",
     "lint:package": "prettier --write **/package.json",
-    "postbuild": "npm run vis:build && node config/prepare.cjs",
-    "postinstall": "npm run vis:install && npm run docs:install",
+    "make": "cd scripts && npm run make --",
+    "postbuild": "echo postbuild",
+    "postinstall": "echo postinstall",
     "prebuild": "npm run clean",
     "prepare": "husky install",
     "publish": "cd dist && npm publish",
-    "scripts:build": "cd scripts && npm run build",
+    "scripts:build": "cd scripts && npm i && npm run build",
     "security": "npm audit --audit-level=high",
     "test": "NODE_OPTIONS=--experimental-vm-modules jest --coverage",
-    "test:e2e": "cd example && ../dist/ts-retype.js . -c .retyperc",
     "test:watchAll": "NODE_OPTIONS=--experimental-vm-modules jest --watchAll",
     "transpile": "tsc",
     "vis:build": "cd vis && npm run build",
