--- a/scripts/package.json
+++ b/scripts/package.json
@@ -7,10 +7,12 @@
   "type": "module",
   "scripts": {
     "build": "tsc",
+    "clean": "rm -rf dist",
     "dev": "nodemon --exec 'ts-node --esm'",
     "dev:docs": "ts-node --esm src/generateDocs.ts",
     "dev:extract": "ts-node --esm src/extractSnippets.ts",
     "dev:snippets": "ts-node --esm src/syntaxHighlighting.ts",
+    "make": "node dist/scripts/src/make.js",
     "run:docs": "node dist/generateDocs.js",
     "run:readme": "node dist/generateReadme.js",
     "run:snippets": "node dist/syntaxHighlighting.js"
@@ -20,6 +22,7 @@
   },
   "devDependencies": {
     "@types/ramda": "^0.28.24",
+    "colors": "^1.4.0",
     "esm": "^3.2.25",
     "refractor": "^4.8.1",
     "ts-node": "^10.9.1",
