--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,7 +14,11 @@ jobs:
           node-version: '18.x'
           registry-url: 'https://registry.npmjs.org'
       - name: Install dependencies and build 🔧
-        run: npm ci && npm run build
+        run: |
+          npm ci
+          npm run scripts:build
+          npm run make -- -p publish
+
       - name: Publish package on NPM 📦
         run: npm run publish
         env:
