--- a/example/package.json
+++ b/example/package.json
@@ -8,8 +8,9 @@
   "type": "module",
   "scripts": {
     "build": "tsc",
-    "check": "tsc && npm run report && npm run start && ts-node --esm src/check.ts",
+    "clean": "rm -rf dist",
     "report": "ts-retype .",
+    "smoke": "tsc && npm run report && npm run start && ts-node --esm src/smoke.ts",
     "start": "ts-node --esm src/index.ts"
   },
   "dependencies": {
