feat: generate docs (#18)
* test: add e2e test

* refactor: separate scripts package

* feat: change lib target to esnext

* feat: add example project

* feat: bundle bin as cjs, set type: module

* fix: setup example project

* refactor: props & config

* chore: .cjs

* feat: syntaxHighlighting CLI

* fix: regenerate snippets

* fix: missing meta

* feat: generate docs snippets

* feat: generate docs snippets

* feat: add example check script

* feat: add generateDocs to pipeline

* feat: add generateReadme

* refator: cli scripts

* feat: create pipeline

--- a/docs/package.json
+++ b/docs/package.json
@@ -4,11 +4,10 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "tsc && npm run snippets && vite build",
+    "build": "tsc && vite build",
+    "clean": "rm -rf dist",
     "dev": "vite",
-    "postinstall": "cd scripts && npm ci",
-    "preview": "vite preview",
-    "snippets": "cd scripts && npm run build && npm run snippets"
+    "preview": "vite preview"
   },
   "dependencies": {
     "react": "^18.2.0",
