--- a/package.json
+++ b/package.json
@@ -15,20 +15,26 @@
   "bugs": "https://github.com/petlack/ts-retype/issues",
   "main": "index.js",
   "bin": {
-    "ts-retype": "dist/ts-retype.js"
+    "ts-retype": "dist/ts-retype.cjs"
   },
+  "type": "module",
   "scripts": {
-    "bin": "./dist/ts-retype.js",
-    "bin:dev": "rollup -c && ./dist/ts-retype.js",
-    "bin:perf": "npm run build && node --stack-size=2000 --max-old-space-size=32768 dist/ts-retype.js",
-    "bin:rebuild": "npm run build && ./dist/ts-retype.js",
+    "bin": "./dist/ts-retype.cjs",
+    "bin:dev": "rollup -c && ./dist/ts-retype.cjs",
+    "bin:perf": "npm run build && node --stack-size=2000 --max-old-space-size=32768 dist/ts-retype.cjs",
+    "bin:rebuild": "npm run build && ./dist/ts-retype.cjs",
     "build": "rollup -c",
+    "build:all": "npm run build && npm run docs:build && npm run scripts:build && npm run example:build",
     "bump": "node config/bump.cjs",
     "clean": "rm -rf dist",
     "dev": "ts-node-dev --respawn",
     "docs:build": "cd docs && npm run build",
     "docs:dev": "cd docs && npm run dev",
     "docs:install": "cd docs && npm ci",
+    "docs:readme": "cd scripts && npm run run:readme",
+    "docs:snippets": "cd scripts && npm run run:docs",
+    "example:build": "cd example && npm run build",
+    "example:report": "cd example && npm run report",
     "format": "prettier --write './**/*.{js,ts,md,json}' --config ./.prettierrc",
     "format:check": "prettier --check .",
     "link": "cd dist && npm link",
@@ -37,11 +43,13 @@
     "lint:js": "eslint --cache src config tests vis/src --ext .js,.ts,.mjs,.cjs",
     "lint:json": "prettier --write **/tsconfig.json",
     "lint:package": "prettier --write **/package.json",
-    "postbuild": "npm run vis:build && node config/prepare.cjs",
-    "postinstall": "npm run vis:install && npm run docs:install",
+    "make": "cd scripts && npm run make --",
+    "postbuild": "echo postbuild",
+    "postinstall": "echo postinstall",
     "prebuild": "npm run clean",
     "prepare": "husky install",
     "publish": "cd dist && npm publish",
+    "scripts:build": "cd scripts && npm i && npm run build",
     "security": "npm audit --audit-level=high",
     "test": "NODE_OPTIONS=--experimental-vm-modules jest --coverage",
     "test:watchAll": "NODE_OPTIONS=--experimental-vm-modules jest --watchAll",
