--- a/scripts/package.json
+++ b/scripts/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "build": "tsc",
     "clean": "rm -rf dist",
-    "dev": "nodemon --exec 'ts-node --esm'",
+    "dev": "nodemon --exec 'ts-node --esm' --",
     "dev:docs": "ts-node --esm src/generateDocs.ts",
     "dev:extract": "ts-node --esm src/extractSnippets.ts",
     "dev:snippets": "ts-node --esm src/syntaxHighlighting.ts",
