--- a/retype/tsconfig.json
+++ b/retype/tsconfig.json
@@ -12,6 +12,10 @@
     "allowJs": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "isolatedModules": true
-  }
+    "isolatedModules": true,
+    "outDir": "dist",
+    "rootDirs": ["src", "tests"]
+  },
+  "include": ["src/**/*", "tests/**/*"],
+  "exclude": ["node_modules", "dist"]
 }
