--- a/vis/package.json
+++ b/vis/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vis",
+  "name": "@ts-retype/vis",
   "version": "0.0.0",
   "private": true,
   "type": "module",
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ts-retype/retype": "*",
     "date-fns": "^2.29.3",
     "minisearch": "^6.0.1",
     "react": "^18.2.0",
