--- a/scripts/package.json
+++ b/scripts/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "scripts",
+  "name": "@ts-retype/scripts",
   "version": "1.0.0",
   "description": "",
   "license": "ISC",
@@ -8,11 +8,11 @@
   "scripts": {
     "build": "tsc",
     "clean": "rm -rf dist",
-    "dev": "nodemon --exec 'ts-node --esm'",
+    "dev": "nodemon --exec 'ts-node --esm' --",
     "dev:docs": "ts-node --esm src/generateDocs.ts",
     "dev:extract": "ts-node --esm src/extractSnippets.ts",
     "dev:snippets": "ts-node --esm src/syntaxHighlighting.ts",
-    "make": "node dist/scripts/src/make.js",
+    "make": "node dist/make.js",
     "run:docs": "node dist/generateDocs.js",
     "run:readme": "node dist/generateReadme.js",
     "run:snippets": "node dist/syntaxHighlighting.js"
