feat: add generateThemes script

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Generate docs
       run: |
         npm i
-        npm run scripts:build
+        npm run build
         npm run make -- -f -p docs
         cp -R ./coverage ./docs/dist/coverage
         npm i coverage-badges-cli -g
