--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Run tests
       run: |
         npm ci
-        npm run scripts:build
+        npm run build
         npm run make -- -f -p test
       env:
         CI: true
